[package]
name = "rust-concurrency-request"
version = "0.1.0"
authors = ["teki.sei <teki.sei@uzabase.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
rayon = "1.1.0"
tokio-threadpool = "0.1.15"
futures = "0.1.28"
failure = "0.1.5"
